...
    <string name="numpad_text_8">8</string>
    <string name="numpad_text_9">9</string>
    <string name="numpad_text_double_score">x2</string>

    <string name="history_winner">Winner</string>

    <string name="list_empty_list">No matches are available</string>

    <string name="match_list_adapter_players_nb">%1$d/%2$d</string>

    <string name="player_list_adapter_quote">Quote : %d</string>

    <string name="profile_label_quote">Quote</string>
...
    <string name="snippet_match_quote">Match Quote:&#160;</string>
    <string name="snippet_player_list">Players:&#160;</string>
    <string name="snippet_game_variant">Variant:&#160;</string>
    <string name="snippet_expiration_date">Valid until:&#160;</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_retry">Retry</string>
    <string name="dialog_join_match">Join Match</string>
    <string name="dialog_join_message">Do you want to join this match ?</string>
    <string name="dialog_join_confirmation">Join!</string>
    <string name="dialog_add_player">Invite Player</string>
    <string name="dialog_add_confirmation">Add</string>
    <string name="dialog_remove_player">Remove this player?</string>
    <string name="dialog_select_team">Choose the team for player </string>
    <string name="dialog_team_selection_confirmation">Select</string>
    <string name="dialog_match">Match!</string>
...
    <string name="toast_could_not_perform_login">Could not perform login. Please try again</string>
    <string name="toast_invalid_score">Invalid score: the max number of points in a round is %d</string>

    <string name="toast_please_enter_description">You must enter a description to create a match.</string>

    <string name="error">Error!</string>
    <string name="error_cannot_join">Can not join match</string>
    <string name="error_match_full">Match is full.</string>
    <string name="error_already_in_match">You are already signed into that match.</string>
    <string name="error_play_services_not_available">Google Play Services is not available.</string>
    <string name="error_auth_failed">Authentication Failed</string>
    <string name="error_retry_message">We weren\'t able to authenticate you. Do you want to retry?</string>

    <string name="icon_description_menu_button">Displays the navigation drawer</string>
    <string name="icon_description_time_picker">Displays a time picker</string>
...
