<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ch.epfl.sweng.jassatepfl.MatchListActivity">

    <Space
        android:id="@+id/create_top_space"
        android:layout_width="wrap_content"
        android:layout_height="?android:attr/actionBarSize"/>

    <ListView
        android:id="@+id/list_nearby_matches"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:divider="@color/listview_divider_color"
        android:dividerHeight="@dimen/listview_divider_height"
        android:drawSelectorOnTop="true"/>

</LinearLayout>
